<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="1"
        android:title="@string/clear_all"/>

    <item
        android:id="@+id/action_default_key"
        android:orderInCategory="2"
        android:title="@string/default_key"/>

    <item
        android:id="@+id/action_default_text_latin"
        android:orderInCategory="3"
        android:title="@string/default_latin_text"/>

    <item
        android:id="@+id/action_default_text_cyrillic"
        android:orderInCategory="4"
        android:title="@string/default_cyrillic_key"/>

    <item
        android:id="@+id/action_default_text_mixed"
        android:orderInCategory="5"
        android:title="@string/default_mixed_text"/>

</menu>